*** When upgrading, don't forget to: "cd bin ; ./install.pl" ***
*** Also, it is _highly_ advisable to backup your data before upgrading ***

Version 1.9.7

* Created another Subversion post-commit script which is an extension
  of the standard commit-email.pl script which ships with Subversion.
  The email sent also includes an additional line, which is the URL to
  the auto-created topic.
  
* Updated install.pl so that it can be executed from any directory, not
  just bin.
  
* Creating Perforce topics directly from already committed files in the
  depot did not work if the depot was on a different machine to the
  web-server.  This has now been fixed.
  
* Fixed an issue where some Perforce describe diffs were not being
  parsed correctly as reported by shambhu.1980@gmail.com.  This has
  now been fixed.  
  
* Added a drop-down on the topic create page where the initial topic
  state can be set.  By default, this is set to "Open", however in
  situations where a review has already been performed but needs to
  be recorded, or a topic is automatically created from a post-commit
  script from an SCM, sometimes another initial state is desirable.
  
* Updated install.pl to support a separate Apache virtual host per
  Codestriker project as suggested by dmulter@users.sourceforge.net.
  Manual has been updated with the appropriate instructions.
  
* Help popup text windows on the create topic and search screens
  disappear automatically when the cursor is moved off the (?) link.
  
* Fixed a bug where Subversion diffs with binary files that contained
  property changes were not handled correctly.  

Version 1.9.6

* Ability to create Codestriker topics automatically from a Subversion
  commit, via the bin/subversion-post-commit.pl script.  Once the
  appropriate configuration is set at the start of the file, simply
  add it to your Subversion repos/hooks/post-commit file as the
  following:
  
  /path/to/codestriker/bin/subversion-post-commit.pl "$REPOS" "$REV"
