@@ -35,12 +35,12 @@ $dbpasswd = 'cspasswd';
 
 # Email addresses of admin users for this installation.  Admin users
 # have unrestricted access to the system.  Non-admin users will not
-# be able to create/edit/delete projects.  If no admin user is defined
-# then no login system will be used, and all users will be effectively
-# admin users.
-$admin_users = [ 'david.sitsky@gmail.com' ];
+# be able to create/edit/delete projects or download the full
+# system metric reports.  If this remains commented out, then no
+# authentication will be required, and users have full access to the
+# system.
+#$admin_users = [ 'david.sitsky@gmail.com' ];
 #$admin_users = [ 'david.sitsky@gmail.com', 'sits@users.sourceforge.net' ];
-#$admin_users = [];
 
 # Location of the mailing host.  This is used when sending out codestriker
 # comments.
@@ -108,10 +108,6 @@ $highlighter = '';
 # used for specifying a different CSS file to use in the html directory.
 #$codestriker_css = 'codestriker.css';
 #$codestriker_css = 'codestriker-alternative.css';
-
-# Indicate what style URLs to support.  The default is CGI-style URLs.  Set
-# this value to 0 for "nicer" URLs. 
-#$cgi_style = 1; 
 
 # Valid repositories which may be selected at the create topic screen.
 # The order shown here is the order presented in the option list.  Most
